[package]
name = "mirrorp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-web = "4.4.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde_json = "1.0.105"
